[tool.poetry]
name = "trending-it"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "trending_it"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.0.4"
djangorestframework = "^3.13.1"
asgiref = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
